fixed - mobile image result was too big for screen

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -26,7 +26,7 @@ $breakpoint-xs: 375px;
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;900&display=swap');
 
 html {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 body {
@@ -107,7 +107,7 @@ button {
   border: none;
   padding: 0 16px;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1rem;
   letter-spacing: 0.25px;
   cursor: pointer;
 
@@ -186,6 +186,7 @@ small {
   height: 1px;
   width: 100%;
   bottom: 23px + 12 + 16;
+  display: none;
 }
 
 #top-form {
@@ -585,7 +586,7 @@ form#background-color {
   .tweet-text {
     margin-top: 1rem;
     line-height: 1.3;
-    font-size: 1.25rem;
+    font-size: 1rem;
     white-space: pre-wrap;
   }
 
@@ -634,9 +635,6 @@ form#background-color {
 
 
 @media (min-width: $breakpoint-sm) {
-  html {
-    font-size: 16px;
-  }
 
   button {
     font-size: 1rem;
@@ -648,6 +646,10 @@ form#background-color {
 
   label {
     letter-spacing: 0.25px;
+  }
+
+  #top-line {
+    display: block;
   }
 
   #container {
